feat: Enhance Copilot integration and CLI configuration
- Introduced CopilotConfig for type-safe configuration of CLI paths and timeouts.
- Updated RetryExecutor to check circuit breaker status before each retry attempt.
- Added new application.yml properties for Copilot CLI configuration.
- Refactored tests to utilize CopilotConfig and ensure proper integration.
- Implemented structured logging with logback-json.xml for better log management.
- Created Dockerfile for building and running the application in a containerized environment.
- Added ADRs for architectural decisions regarding CLI parsing, dependency injection, and virtual thread orchestration.
- Implemented a script for archiving report directories.
- Enhanced tests for Copilot CLI health checks and path resolution.